fix: adjust columnBody margin for improved responsiveness on small screens

--- a/src/components/Body.module.css
+++ b/src/components/Body.module.css
@@ -10,6 +10,10 @@
     @media screen and (max-width: 1100px) {
         width: calc(100% - var(--root-page-padding) * 2);
     }
+
+    @media screen and (max-width: 450px) {
+        margin-bottom: var(--root-page-padding);
+    }
 }
 
 .rowBody {
